合并import-repo和silica，提高性能和稳定性
